[package]
name = "website"
version = "0.1.0"
edition = "2021"
description = "Single Page Application (SPA) built with Rust + WASM for Stardust Software NZ"
authors = ["Jesse Wood <j.r.h.wood98@gmail.com>"]
license = "MIT"
homepage = "https://stardustsoftwarenz.github.io/"
repository = "https://github.com/StardustSoftwareNZ/StardustSoftwareNZ.github.io"
keywords = ["rust", "wasm", "SPA", "web-app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Yew provides a react-like web application framework (see https://yew.rs/)
yew = "^0.19"
# The default router for SPA made using yew (see https://yew.rs/docs/concepts/router)
yew-router = "0.16"