[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
yew-router = "0.16"
gloo = "0.8"
log = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3.63", features = [
  "Window", 
  "Document", 
  "Element", 
  "HtmlElement",
  "MouseEvent",
  "DomRect",
  "Node",
  "HtmlCollection",
  "ScrollToOptions",
  "ScrollBehavior",
]}
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.77"
dotenv = "0.15.0"
wasm-bindgen-futures = "0.4.50"
dotenv_codegen = "0.15.0"
gloo-utils = "0.2.0"

[build-dependencies]
dotenv = "0.15.0"

